Updated navbar styles

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
-<h1 class="name-color">Lestley A. Gabo</h1>
+<div class="home-callout text-center container-fluid">
+  <h1>Lestley A. Gabo</h1>
+  <h3>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h3>
+  <h3>It also contains links to my projects, completed or otherwise.</h3>
+</div>
+
