--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/" class="navbar-brand"></a>
+          <a href="/" class="navbar-brand">Lestley A. Gabo</a>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -28,8 +28,8 @@
       </div>
     </nav>
     
-    <div class="container">
-      <%= yield %>
-    </div>
+
+    <%= yield %>
+
   </body>
 </html>
