--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/" class="navbar-brand">Lestley A. Gabo</a>
+          <a href="/" class="navbar-brand"><i class="fa fa-mars"></i> Lestley A. Gabo</a>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/about">Contact Lestley</a></li>
+            <li><a href="/about"><i class="fa fa-envelope-open"></i> Contact Lestley</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
