Updated nav links using link_to

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/" class="navbar-brand"><i class="fa fa-mars"></i> Lestley A. Gabo</a>
+          <%= link_to "/", class: "navbar-brand" do %>
+            <i class= "fa fa-mars"></i>
+            Lestley A. Gabo
+          <% end %>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/about"><i class="fa fa-envelope-open"></i> Contact Lestley</a></li>
+            <li><%= link_to "Contact Lestley", "/about" %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
