--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "/", class: "navbar-brand" do %>
+          <%= link_to root_path, class: "navbar-brand" do %>
             <i class= "fa fa-mars"></i>
             Lestley A. Gabo
           <% end %>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Contact Lestley", "/about" %></li>
+            <li>
+              <%= link_to about_path do %>
+                <i class= "fa fa-envelope-open-o"></i>
+                Contact Lestley
+              <% end %>
+            </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
