Updated logo style

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,12 +34,13 @@ h1, h2, h3 {
 }
 
 // Nav Styles
-.name-color{
-  color: white;
-}
-
 .navbar {
   border: none;
+}
+
+.navbar-brand {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
 }
 
 .navbar-default .navbar-brand, 
