--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           </button>
           <%= link_to root_path, class: "navbar-brand" do %>
             <i class= "fa fa-mars"></i>
-            Lestley A. Gabo
+            Lestley Links
           <% end %>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
@@ -28,7 +28,7 @@
             <li>
               <%= link_to about_path do %>
                 <i class= "fa fa-envelope-open-o"></i>
-                Contact Lestley
+                Look up Lestley
               <% end %>
             </li>
           </ul>
