Added Bootstrap js and updated nav styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to root_path, class: "navbar-brand" do %>
-            <i class= "fa fa-mars"></i>
+            <i class= "fa fa-id-badge"></i> 
             Lestley Links
           <% end %>
         </div>
