--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,6 +52,18 @@ h1, h2, h3 {
   }
 }
 
+// navbar when minimizing screen
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+
+.navbar-default .navbar-toggle {
+  border: 2px solid white;
+  &:hover, &:focus {
+    background-color: #29323c;
+  }
+}
+
 // Homepage Styles
 .home-callout {
   color:white;
