Switched about place holder to Contact Lestley

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,9 @@
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <%= link_to about_path do %>
+              <%= link_to new_contact_path do %>
                 <i class= "fa fa-envelope-open-o"></i>
-                Look up Lestley
+                Contact Lestley
               <% end %>
             </li>
           </ul>
