--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <%= link_to new_contact_path do %>
+              <%= link_to 'contact-lestley' do %> <!-- new_contact_path -->
                 <i class= "fa fa-envelope-open-o"></i>
                 Contact Lestley
               <% end %>
