Installed gem compass and copy pasted Pure CSS Horizontal Accordion

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,3 +4,78 @@
   <h3>It also contains links to my projects, completed or otherwise.</h3>
 </div>
 
+<!----------------------------------------------------------------------------->
+
+
+
+
+
+<body>
+  <div class="container">
+    <ul class="accordion">
+      <li class="tabs">
+        <div class="social-links twitter-icon">
+          <a href="http://twitter.com/renettarenula">Twitter</a>
+        </div>
+        <div class="paragraph">
+          <h1>Twitter</h1>
+          <p>My thoughts in 140 characters or less. Sometimes, I do not know how to correctly use Twitter.</p>
+        </div>
+      </li>
+      <li class="tabs">
+        <div class="social-links facebook-icon">
+          <a href="http://facebook.com">Facebook</a>
+        </div>
+        <div class="paragraph">
+          <h1>Facebook</h1>
+          <p>Where I get to stalk my friends and let them stalk me. A place to get people to stroke your ego.</p>
+        </div>
+      </li>
+      <li class="tabs">
+        <div class="social-links linkedin-icon">
+           <a href="http://my.linkedin.com/pub/aysha-anggraini/49/a82/a05/">LinkedIn</a>
+        </div>
+        <div class="paragraph">
+          <h1>LinkedIn</h1>
+          <p>I act totally professional on this one. It is what the recruiters see, you see.</p>
+        </div>
+      </li>
+      <li class="tabs">
+        <div class="social-links insta-icon">
+          <a href="http://instagram.com/renettarenula">Instagram</a>
+        </div>
+        <div class="paragraph">
+          <h1>Instagram</h1>
+          <p>Where I post my duckface pictures. Occasionally, I would post pictures of my food and my cats.</p>
+        </div>
+      </li>
+      <li class="tabs">
+        <div class="social-links youtube-icon">
+          <a href="http://youtube.com">Youtube</a>
+        </div>
+        <div class="paragraph">
+          <h1>YouTube</h1>
+          <p>Just kidding! I do not have a YouTube account. I'm not too fond of the camera.</p>
+        </div>
+      </li>
+      <li class="tabs">
+        <div class="social-links tumblr-icon">
+          <a href="http://renettarenula.tumblr.com/">Tumblr</a>
+        </div>
+        <div class="paragraph">
+          <h1>Tumblr</h1>
+          <p>I have a tumblr but I don't really use it. I still prefer WordPress. I'm quite old-fashioned.</p>
+        </div>
+      </li>
+      <li class="tabs">
+        <div class="social-links dribbble-icon">
+          <a href="http://dribbble.com">Dribbble</a>
+        </div>
+        <div class="paragraph">
+          <h1>Dribbble</h1>
+          <p>I do not have a Dribbble account. Would any of you be so kind and send me an invite? </p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</body>
