--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -75,229 +75,178 @@ h1, h2, h3 {
 
 ////////////////////////////////////////////////////////////////////
 
-/* Updated version - 24th Nov 2014 */
+$gray: #eee;
+$white: #fff;
+$black: #333;
+$active: #E74C3C;
 
-@import 'compass/reset';
-@import 'compass/css3';
-
-/* Variables */
-
-$backgroundColor: #f77462;
-$list: #6dc5dd;
-$border: #5ab2ca;
-$geneicons: #fff;
-
-body {
-  background: $backgroundColor;
-  font-family: Lato, sans-serif;
+html, body {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	background-color: $gray;
+	font-family: 'Raleway';
 }
 
-@font-face {
-  font-family: 'Genericons';
-  src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/genericons-regular-webfont.eot');
-  src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/genericons-regular-webfont.woff') format('woff'),
-     url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/genericons-regular-webfont.eot') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+ul, li {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
-[class*="genericon"] {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  -webkit-font-smoothing: antialiased;
-  font-size: 16px;
-  line-height: 1;
-  font-family: 'Genericons';
-  text-decoration: inherit;
-  font-weight: normal;
-  font-style: normal;
-  vertical-align: top;
+.icon {
+  	position: relative;
+  	width: 32px;
+  	height: 32px;
+  	display: block;
+  	fill: rgba($black, .5);
+	margin-right: 20px;
+	transition: all .2s ease-out;
 }
 
-/* IE7 */
-[class*="genericon"] {
-  *overflow: auto;
-  *zoom: 1;
-  *display: inline;
+.icon.active {
+	fill: $active;
 }
 
-.container {
-  margin: 100px auto;
+.icon.big {
+	width: 64px;
+	height: 64px;
+	fill: rgba($black, .5);;	
 }
 
-.accordion {
-  background: $border;
-  width: 100%;
-  min-width: 950px;
-  display: block;
-  list-style-type: none;
-  overflow: hidden;
-  height: 200px;
-  font-size: 0;
+#wrapper {
+	width: 900px;
+	height: 400px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;	
+	background-color: $white;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	display: flex;
+  	align-items: center;
+  	justify-content: left;
+	overflow: hidden
+
 }
 
-.tabs {
-  display: inline-block;
-  background-color: $list;
-  border-right: $border 1px solid;
-  width: 80px;
-  height: 200px;
-  overflow: hidden;
-  position: relative;
-  margin: 0;
-  font-size: 16px;
-  @include transition( all 0.4s 0.1s ease-in-out );
-
-  &:hover {
-    width: 450px;
-
-    .social-links {
-      a {
-        &:before {
-          margin-left: -100px;
-        }
-
-        &:after {
-          margin-left: -5px;
-        }
-      }
-    }
-  }
-
-  .paragraph {
-    position: relative;
-    width: 360px;
-    margin-left: 80px;
-    padding: 50px 0 0 10px;
-    height: 200px;
-    background: #fff;
-
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    } 
-
-    p {
-      font-size: 0.88em;
-      line-height: 1.5em;
-      padding-right: 30px;
-    }
-  }
+#left-side {
+	height: 70%;
+	width: 25%;
+	display: flex;
+  	align-items: center;
+  	justify-content: center;
+	
+	ul {
+		
+		li {
+			padding-top: 10px;
+			padding-bottom: 10px;
+			display: flex;
+			line-height: 34px;
+			color: rgba($black, .5);
+			font-weight: 500;
+			cursor: pointer;
+			transition: all .2s ease-out;
+			
+			&:hover {
+				color: rgba($black, 1);
+				transition: all .2s ease-out;
+			}
+			
+			&:hover > .icon {
+				fill: $black;
+			}
+		}
+		
+		li.active {
+			color: rgba($black, 1);
+			
+			&:hover > .icon {
+				fill: $active;
+			}
+		}
+	}
 }
 
-.social-links {
-  display: block;
-
-  a {
-    display: block;
-    text-indent: -9999px;
-    font-size: 0;
-    line-height: 0;
-
-    &:before, &:after {
-      @include transition( all 0.4s 0.1s ease-in-out );
-      width: 80px;
-      height: 200px;
-      position: absolute;
-      text-indent: 0;
-      padding-top: 90px;
-      padding-left: 25px;
-      display: block;
-      font: normal 30px Genericons;
-      color: $geneicons;
-    }
-
-    &:after {
-      font-size: 48px;
-      padding-left: 20px;
-      padding-top: 80px;
-      margin-left: 85px;
-    }
-  }
+#border {
+	height: 288px;
+	width: 1px;
+	background-color: rgba($black, .2);
+	
+	#line.one {
+		width: 5px;
+		height: 54px;
+		background-color: $active;
+		margin-left: -2px;
+		margin-top: 35px;
+		transition: all .4s ease-in-out;
+	}
+	
+	#line.two {
+		width: 5px;
+		height: 54px;
+		background-color: $active;
+		margin-left: -2px;
+		margin-top: 89px;
+		transition: all .4s ease-in-out;
+	}
+	
+	#line.three {
+		width: 5px;
+		height: 54px;
+		background-color: $active;
+		margin-left: -2px;
+		margin-top: 143px;
+		transition: all .4s ease-in-out;
+	}
+	
+	#line.four {
+		width: 5px;
+		height: 54px;
+		background-color: $active;
+		margin-left: -2px;
+		margin-top: 197px;
+		transition: all .4s ease-in-out;
+	}
 }
 
-.twitter-icon {
-  a {
-    &:before, &:after {
-      content: '\f202';
-    }
-
-    &:after {
-      @include background-image(linear-gradient(#7adcf9, #4bc9f5));
-    }
-  }
+#right-side {
+	height: 300px;
+	width: 75%;
+	overflow: hidden;
+	
+	#first, #second, #third, #fourth {
+		position: absolute;
+		height: 300px;
+		width: 75%;
+		transition: all .6s ease-in-out;
+		margin-top: -350px;
+		opacity: 0;
+		display: flex;
+  		align-items: center;
+  		justify-content: center;
+		flex-direction: column;
+		  
+		h1 {
+			font-weight: 800;
+			color: $black;	
+		}
+		
+		p {
+			color: $black;
+			font-weight: 500;
+			padding-left: 30px;
+			padding-right: 30px;
+		}
+	}
+	
+	#first.active, #second.active, #third.active, #fourth.active {
+		margin-top: 0px;
+		opacity: 1;
+		transition: all .6s ease-in-out;
+	}
 }
-
-.facebook-icon {
-  a {
-    &:before, &:after {
-      content: '\f204';
-    }
-
-    &:after {
-      @include background-image(linear-gradient(#548abf, #295b9e));
-    }
-  }
-}
-
-.linkedin-icon {
-  a {
-    &:before, &:after {
-      content: '\f208';
-    }
-
-    &:after {
-      @include background-image(linear-gradient(#00a9cd, #0083b4));
-    }
-  }
-}
-
-.insta-icon {
-  a {
-    &:before, &:after {
-      content: '\f215';
-    }
-
-    &:after {
-      @include background-image(linear-gradient(#7fc121, #298733));
-    }
-  }
-}
-
-.youtube-icon {
-  a {
-    &:before, &:after {
-      content: '\f213';
-    }
-
-    &:after {
-      @include background-image(linear-gradient(#df192a, #c41222));
-    }
-  }
-}
-
-.tumblr-icon {
-  a {
-    &:before, &:after {
-      content: '\f214';
-    }
-
-    &:after {
-      @include background-image(linear-gradient(#283e56, #325372));
-    }
-  }
-}
-
-.dribbble-icon {
-  a {
-    &:before, &:after {
-      content: '\f201';
-    }
-
-    &:after {
-      @include background-image(linear-gradient(#e03a70, #f189b8));
-    }
-  }
-}
-
