Installed Bourbon gem and added Fancy Button Effect Snippet from codemyui

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,15 +8,11 @@
 
 
 
-<h1>Rotating Icon Buttons</h1>
-<div class="main-wrapper">
-		<i class="material-icons">attach_file</i>
-		<i class="material-icons">settings</i>
-		<i class="material-icons">refresh</i>
-		<i class="material-icons">search</i>
-		<i class="material-icons">explore</i>
-		<i class="material-icons">public</i>
-		<i class="material-icons">autorenew</i>
-		<i class="material-icons">add</i>
+<div class="wrap">
+  <a href="#" class="btn">Cool Button</a>
+  <a href="#" class="btn2">Cool Button</a>
+  <a href="#" class="btn3">Cool Button</a>
+  <a href="#" class="btn4">Cool Button</a>
+  <a href="#" class="btn5">Cool Button</a>
+  <a href="#" class="btn6">Cool Button</a></a>
 </div>
-<p>CodePen by Cole Waldrip</p>
