--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -76,187 +76,210 @@ h1, h2, h3 {
 }
 
 ////////////////////////////////////////////////////////////////////
+@import "bourbon";
 
-//@import 'url';
-* {
-		font-family: "Roboto", Arial, sans-serif;
-}
+
+/* Demo styling */
 
 body {
-		font-size: 1rem;
-		background-color: #ebebeb;
-		padding: 20px;
-		text-align: center;
+  background-color: #eee;
+  box-sizing: border-box;
+  font-family: "Futura PT", "Futura", sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
-h1 {
-		font-weight: 100;
-		color: #777;
+/* Buttons at the center */
+
+.wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -259px;
+  margin-left: -89px;
+  text-align: center;
 }
 
-.main-wrapper {
-		border-radius: 4px;
-		background-color: white;
-		padding: 20px;
-		box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-		position: relative;
+/* General styling for the links */
+
+a {
+  padding: 15px 30px;
+  text-decoration: none;
+  font-size: 18px;
+  display: block;
+  margin: 20px auto;
 }
 
-i.material-icons {
-		font-size: 1.5rem;
-		color: white;
-		position: relative;
-		border-radius: 50%;
-		padding: 5px;
-		margin: 3px;
-		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-		transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease;
+/* BUTTON 1 */
+
+.btn, .btn:link, .btn:visited {
+  color: #2c3e50;
+  line-height: 1em;
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #fff;
+  background-color: rgba(255,255,255, 0);
+  box-shadow: 0 0 0 0 #2c3e50 inset, 0.3em 0.2em 0 0 #bbb;
+  border: 0.2em solid #2c3e50;
+  padding: 0.8em;
+  text-align: center;
+  transition: 0.25s box-shadow, 0.25s transform;
+  
+  &:hover {
+    box-shadow: 0 4em 0 0 #2c3e50 inset, 0em 0em 0 0 #bbb;
+    transform: translate(0.3em, 0.2em);
+    color: #fff;
+  }
 }
 
-i.material-icons:after {
-		content: "";
-		width: 100%;
-		height: 100%;
-		border: solid 2px;
-		transform: scale(0.8);
-		position: absolute;
-		top: -2px;
-		left: -2px;
-		border-radius: 50%;
-		transition: all 0.3s ease;
+/* BUTTON 2 */
+
+.btn2, .btn2:link, .btn2:visited {
+   background-color: #5b657c;
+   border: none;
+   border-radius: 3px;
+   box-shadow: 0 -3px 0 rgba(0,0,0,0.15) inset;
+   color: #fff;
+  letter-spacing: .1em;
+   cursor: pointer;
+   position: relative;
+   text-align: center;
+   text-transform: uppercase;
+   vertical-align: middle;
+   white-space: nowrap;
+  transition-property: transform;
+  transform: translateZ(0);
+  transition: box-shadow 0.5s cubic-bezier(0.390, 0.500, 0.150, 1.360);
+   
+   &:hover {
+     box-shadow: 0 0 0 28px rgba(0,0,0,0.25) inset;
+   }
+  
+  &:active {
+    transform: translateY(3px);
+  }
+ }
+
+/* BUTTON 3 */
+
+.btn3, .btn3:link, .btn3:visited {
+  color: #333;
+  font-size: .8em;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+  min-width: 100px;
+  max-width: 60%;
+  position: relative;
+  margin: 0 auto;
+  border: 2px solid transparent;
+  transition: all .2s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+
+  &:after, &:before {
+    content: "";
+    position: absolute;
+    left: - 1em;
+    top: -2px;
+    height: 3.3em;
+    width: 0;
+    border: 1px solid #c75842;
+    transition: inherit;
+  }
+
+  &:after {
+    left: auto;
+    right: -1em;
+  }
+
+  &:hover {
+    border-color: #c75842;
+    transition: border-color .2s .2s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    
+    &:after, &:before {
+      right: -2px;      
+      transition: all .2s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    }
+    
+    &:before {
+      left: -2px;
+      right: auto;
+    }
+  }
 }
 
-i.material-icons:hover:after {
-		transform: scale(1);
-		box-shadow: 10px 0 20px rgba(0, 0, 0, 0.19), 6px 0 6px rgba(0, 0, 0, 0.23);
+/* BUTTON 4 */
+
+.btn4, .btn4:link, .btn4:visited {
+  background: #f1c40f;
+  color: #fefefe;
+  transition: box-shadow .18s ease;
+  
+  &:hover {
+    box-shadow: inset 0 0 0 5px darken(#f1c40f, 10%);
+  }
 }
 
-i.material-icons:nth-of-type(4) {
-		background-color: #88b999;
+/* BUTTON 5 */
+
+.btn5, .btn5:link, .btn5:visited {
+  border: none;
+  outline: none;
+  color: #fefefe;
+  background-color: #9b59b6;
+  border-radius: 3px;
+  
+  &:hover, &:focus {
+    transition-timing-function: cubic-bezier(0.6, 4, 0.3, 0.8);
+    animation: gelatine 0.5s 1;
+  }
 }
 
-i.material-icons:nth-of-type(4):hover {
-		color: #88b999;
+// Bourbon mixin
+
+@include keyframes(gelatine) {
+  from,to {
+    @include transform(scale(1, 1));
+  }
+  25% {
+    @include transform(scale(0.9, 1.1));
+  }
+  50% {
+    @include transform(scale(1.1, 0.9));
+  }
+  75% {
+    @include transform(scale(0.95, 1.05));
+  }
+  from,to {
+    @include transform(scale(1, 1));
+  }
+  25% {
+    @include transform(scale(0.9, 1.1));
+  }
+  50% {
+    @include transform(scale(1.1, 0.9));
+  }
+  75% {
+    @include transform(scale(0.95, 1.05));
+  }
 }
 
-i.material-icons:nth-of-type(4):after {
-		border-color: #88b999;
+/* BUTTON 6 */
+
+.btn6, .btn6:link, .btn6:visited {
+  padding: 13px 0;
+  border: 1px solid #333;
+  color: #333;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 3px;
+  transition: all .2s ease-in-out;
+  
+  &:hover {
+    background: #333;
+    border: 1px solid #333;
+    color: #fefefe;
+    border-radius: 30px;
+  }
 }
 
-i.material-icons:nth-of-type(5) {
-		background-color: #88b2b9;
-}
-
-i.material-icons:nth-of-type(5):hover {
-		color: #88b2b9;
-}
-
-i.material-icons:nth-of-type(5):after {
-		border-color: #88b2b9;
-}
-
-i.material-icons:nth-of-type(6) {
-		background-color: #8897b9;
-}
-
-i.material-icons:nth-of-type(6):hover {
-		color: #8897b9;
-}
-
-i.material-icons:nth-of-type(6):after {
-		border-color: #8897b9;
-}
-
-i.material-icons:nth-of-type(7) {
-		background-color: #af88b9;
-}
-
-i.material-icons:nth-of-type(7):hover {
-		color: #af88b9;
-}
-
-i.material-icons:nth-of-type(7):after {
-		border-color: #af88b9;
-}
-
-i.material-icons:nth-of-type(8) {
-		background-color: #d59acb;
-}
-
-i.material-icons:nth-of-type(8):hover {
-		color: #d59acb;
-}
-
-i.material-icons:nth-of-type(8):after {
-		border-color: #d59acb;
-}
-
-i.material-icons:nth-of-type(1) {
-		background-color: #cd8484;
-}
-
-i.material-icons:nth-of-type(1):hover {
-		color: #cd8484;
-}
-
-i.material-icons:nth-of-type(1):after {
-		border-color: #cd8484;
-}
-
-i.material-icons:nth-of-type(2) {
-		background-color: #ec9f83;
-}
-
-i.material-icons:nth-of-type(2):hover {
-		color: #ec9f83;
-}
-
-i.material-icons:nth-of-type(2):after {
-		border-color: #ec9f83;
-}
-
-i.material-icons:nth-of-type(3) {
-		background-color: #cdb274;
-}
-
-i.material-icons:nth-of-type(3):hover {
-		color: #cdb274;
-}
-
-i.material-icons:nth-of-type(3):after {
-		border-color: #cdb274;
-}
-
-i.material-icons:hover {
-		background-color: transparent;
-		transform: rotate(90deg);
-		cursor: pointer;
-		box-shadow: none;
-}
-
-p {
-		color: #999;
-		font-weight: 300;
-		margin-top: 20px;
-}
-
-@media (min-width:601px) {
-	i.material-icons {
-		padding:10px;
-		margin:5px;
-		font-size:2rem;
-	}
-}
-
-@media (min-width:993px) {
-	i.material-icons {
-		padding:20px;
-		margin:10px;
-		font-size:4rem;
-	}
-	i.material-icons:after {
-		border-width:3px;
-		top:-3px;
-		left:-3px;
-	}
-}
