Added links for reference for fancy button effect

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -76,6 +76,7 @@ h1, h2, h3 {
 }
 
 ////////////////////////////////////////////////////////////////////
+//  https://codemyui.com/fancy-button-effects/
 @import "bourbon";
 
 
