Wondered why the home page does not have the DOCTYPE html

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,24 @@
-<div class="home-callout text-center container-fluid">
-  <h1>Lestley A. Gabo</h1>
-  <h3>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h3>
-  <h3>It also contains links to my projects, completed or otherwise.</h3>
-</div>
-
-<!----------------------------------------------------------------------------->
-
-<!-- https://codemyui.com/fancy-button-effects/ -->
-<div class="wrap">
-  <a href="#" class="btn">Cool Button</a>
-  <a href="#" class="btn2">Cool Button</a>
-  <a href="#" class="btn3">Cool Button</a>
-  <a href="#" class="btn4">Cool Button</a>
-  <a href="#" class="btn5">Cool Button</a>
-  <a href="#" class="btn6">Cool Button</a></a>
-</div>
+<!DOCTYPE html>
+<html>
+  <div class="home-callout text-center container-fluid">
+    <h1>Lestley A. Gabo</h1>
+    <h3>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h3>
+    <h3>It also contains links to my projects, completed or otherwise.</h3>
+  </div>
+  
+  <!----------------------------------------------------------------------------->
+  
+  <!-- https://codemyui.com/fancy-button-effects/ -->
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <div class="well text-center">
+           <a href="#" class="btn6">Cool Button</a>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis, dolore, laboriosam necessitatibus fugiat exercitationem facere asperiores nobis nesciunt corrupti atque saepe commodi placeat quia tenetur ea veritatis cum fugit!
+        </div>
+      </div>
+    </div>
+  </div>
+  
+</html>
