--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,9 +12,27 @@
   
   <div class="container">
     <div class="row">
-      <div class="col-md-4 col-md-offset-4">
+      <div class="col-md-3">
         <div class="well text-center">
-           <a href="#" class="btn6">Cool Button</a>
+           <a href="#" class="btn2">LinkedIn</a>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis, dolore, laboriosam necessitatibus fugiat exercitationem facere asperiores nobis nesciunt corrupti atque saepe commodi placeat quia tenetur ea veritatis cum fugit!
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="well text-center">
+           <a href="#" class="btn2">GitHub</a>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis, dolore, laboriosam necessitatibus fugiat exercitationem facere asperiores nobis nesciunt corrupti atque saepe commodi placeat quia tenetur ea veritatis cum fugit!
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="well text-center">
+           <a href="#" class="btn2">HackerRank</a>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis, dolore, laboriosam necessitatibus fugiat exercitationem facere asperiores nobis nesciunt corrupti atque saepe commodi placeat quia tenetur ea veritatis cum fugit!
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="well text-center">
+           <a href="#" class="btn2">DevMatch</a>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis, dolore, laboriosam necessitatibus fugiat exercitationem facere asperiores nobis nesciunt corrupti atque saepe commodi placeat quia tenetur ea veritatis cum fugit!
         </div>
       </div>
