--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -146,20 +146,20 @@ a {
    cursor: pointer;
    position: relative;
    text-align: center;
-   text-transform: uppercase;
+  // text-transform: uppercase;
    vertical-align: middle;
    white-space: nowrap;
   transition-property: transform;
-  transform: translateZ(0);
-  transition: box-shadow 0.5s cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  // transform: translateZ(0);
+  // transition: box-shadow 0.5s cubic-bezier(0.390, 0.500, 0.150, 1.360);
    
    &:hover {
      box-shadow: 0 0 0 28px rgba(0,0,0,0.25) inset;
    }
   
-  &:active {
-    transform: translateY(3px);
-  }
+   &:active {
+    // transform: translateY(3px);
+   }
  }
 
 /* BUTTON 3 */
