--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -16,7 +16,7 @@
             <%= f.text_area :comments, class: 'form-control' %>
           </div>
             
-            <%= f.submit 'Submit', class: 'btn btn-default' %>
+            <%= f.submit 'Submit', class: 'btn btn2' %>
         <% end %>
       </div>
     </div>
