Added Fancy buttons i.e. Cool buttons codepen author for reference

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -76,7 +76,10 @@ h1, h2, h3 {
 }
 
 ////////////////////////////////////////////////////////////////////
-//  https://codemyui.com/fancy-button-effects/
+// https://codemyui.com/fancy-button-effects/
+// http://codepen.io/rickzanutta/pen/EactG
+// Cool buttons
+// A PEN BY Riccardo Zanutta
 @import "bourbon";
 
 
