--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,8 +24,12 @@
     </div>
     <div class="col-md-3">
       <div class="well text-center">
-         <a href="#" class="btn2">HackerRank</a>
+         
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis, dolore, laboriosam necessitatibus fugiat exercitationem facere asperiores nobis nesciunt corrupti atque saepe commodi placeat quia tenetur ea veritatis cum fugit!
+        <%= link_to "//google.com", class:"btn2" do %>
+          <i class= "fa fa-h-square"></i>
+          HackerRank
+        <% end %>
       </div>
     </div>
     <div class="col-md-3">
