Fixed CSS hover on button would turn black, changed to white

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -137,7 +137,7 @@ a {
    
    &:hover {
      box-shadow: 0 0 0 28px rgba(0,0,0,0.25) inset;
-     color: none;
+     color: white;
    }
   
    &:active {
@@ -146,10 +146,7 @@ a {
    
  }
 
-.btn:hover, .btn:focus, .btn.focus {
-    color: none;
-    text-decoration: none;
-}
+
 // Bourbon mixin
 
 @include keyframes(gelatine) {
