Removed fluff from Home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home-callout text-center container-fluid">
   <h1>Lestley A. Gabo</h1>
-  <h3>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h3>
-  <h3>It also contains links to my projects, completed or otherwise.</h3>
+  <!--<h3>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h3>-->
+  <!--<h3>It also contains links to my projects, completed or otherwise.</h3>-->
 </div>
 
 <!----------------------------------------------------------------------------->
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="well text-center">
-        <%= link_to "//google.com", class:"btn2" do %>
+        <%= link_to "//www.linkedin.com/in/lestgabo/", class:"btn2", target: "_blank" do %>
           <i class= "fa fa-linkedin-square"></i>
           LinkedIn
         <% end %>
@@ -19,7 +19,7 @@
     </div>
     <div class="col-md-3">
       <div class="well text-center">
-        <%= link_to "//google.com", class:"btn2" do %>
+        <%= link_to "//github.com/lestgabo", class:"btn2", target: "_blank" do %>
           <i class= "fa fa-github-square"></i>
           GitHub
         <% end %>
@@ -27,7 +27,7 @@
     </div>
     <div class="col-md-3">
       <div class="well text-center">
-        <%= link_to "//google.com", class:"btn2" do %>
+        <%= link_to "//www.hackerrank.com/beeftosino", class:"btn2", target: "_blank" do %>
           <i class= "fa fa-h-square"></i>
           HackerRank
         <% end %>
@@ -35,7 +35,7 @@
     </div>
     <div class="col-md-3">
       <div class="well text-center">
-        <%= link_to "//google.com", class:"btn2" do %>
+        <%= link_to "//pacific-mesa-35161.herokuapp.com/", class:"btn2", target: "_blank" do %>
           <i class= "fa fa-users"></i>
           DevMatch
         <% end %>
