Scrapped well and put links inside container-fluid and added projects section

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,7 +27,7 @@ h1, h2, h3 {
 }
 
 // Background gradient
-.navbar, .home-callout, .not-name-container, .btn2 {
+.navbar, .home-callout, .not-name-container {
   //Gradient provided by @_ighosh at uiGradients.com
   // ServQuick from uiGradients.com
   background: #485563; /* fallback for old browsers */
@@ -76,6 +76,10 @@ h1, h2, h3 {
 }
 
 .not-name-container {
+  padding: 0px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  border-color: transparent;
   color: white;
 }
 
@@ -110,12 +114,13 @@ body {
 
 /* General styling for the links */
 
-a {
+.btn2 {
   padding: 15px 30px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 25px;
   display: block;
   margin: 20px auto;
+  
 }
 
 
@@ -123,7 +128,7 @@ a {
 /* BUTTON 2 */
 
 .btn2, .btn2:link, .btn2:visited {
-   background-color:  #485563;// #5b657c;
+   background-color: #29323c;// #5b657c;
    border: none;
    border-radius: 3px;
    box-shadow: 0 -3px 0 rgba(0,0,0,0.15) inset;
@@ -141,7 +146,7 @@ a {
    transition: box-shadow 0.5s cubic-bezier(0.390, 0.500, 0.150, 1.360);
    
    &:hover {
-     box-shadow: 0 0 0 28px rgba(0,0,0,0.25) inset;
+     box-shadow: 0 0 0 35px rgba(0,0,0,0.25) inset;
      color: white;
    }
   
