--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,52 +2,66 @@
   <h1><b> Lestley A. Gabo </b></h1>
   <!--<h3>This page contains links to my LinkedIn, GitHub, and HackerRank profiles.</h3>-->
   <!--<h3>It also contains links to my projects, completed or otherwise.</h3>-->
+  
+  <br>
+  <h2> Profiles </h2>
+  <div class="container">
+    <div class="row">  
+      <div class="col-md-4">
+        <%= link_to "//www.linkedin.com/in/lestgabo/", class:"btn2", target: "_blank" do %>
+          <i class= "fa fa-linkedin-square"></i>
+          LinkedIn
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to "//github.com/lestgabo", class:"btn2", target: "_blank" do %>
+          <i class= "fa fa-github-square"></i>
+          GitHub
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to "//www.hackerrank.com/beeftosino", class:"btn2", target: "_blank" do %>
+          <i class= "fa fa-h-square"></i>
+          HackerRank
+        <% end %>
+      </div>
+    </div>
+  </div>
+  
+  <br>
+  <h2> Web Projects </h2>
+  <div class="container">
+    <div class="row"> 
+      <div class="col-md-4">
+        <%= link_to "//pacific-mesa-35161.herokuapp.com/", class:"btn2", target: "_blank" do %>
+        <i class= "fa fa-users"></i>
+        DevMatch
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to "//shielded-river-55784.herokuapp.com/", class:"btn2", target: "_blank" do %>
+        <i class= "fa fa-id-badge"></i>
+        Lestley Links
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to "#", class:"btn2" do %>
+        <i class= "fa fa-question"></i>
+        F5Sect
+        <% end %>
+      </div>
+    </div>
+  </div>
+  
+  
+  
 </div>
 
 <!----------------------------------------------------------------------------->
 
 
-<div class="container">
-  
-  <div class="row">
-    <div class="col-md-12">
-      <div class="well text-center not-name-container">
-        <h2> Profiles </h2>
-      </div>
-    </div>
-  </div>
-  
-  <div class="row">  
-    <div class="col-md-4">
-      <%= link_to "//www.linkedin.com/in/lestgabo/", class:"btn2", target: "_blank" do %>
-        <i class= "fa fa-linkedin-square"></i>
-        LinkedIn
-      <% end %>
-    </div>
-    <div class="col-md-4">
-      <%= link_to "//github.com/lestgabo", class:"btn2", target: "_blank" do %>
-        <i class= "fa fa-github-square"></i>
-        GitHub
-      <% end %>
-    </div>
-    <div class="col-md-4">
-      <%= link_to "//www.hackerrank.com/beeftosino", class:"btn2", target: "_blank" do %>
-        <i class= "fa fa-h-square"></i>
-        HackerRank
-      <% end %>
-    </div>
+   
 
     
-    <!--<div class="col-md-3">-->
-    <!--  <div class="well text-center">-->
-    <!--    <%= link_to "//pacific-mesa-35161.herokuapp.com/", class:"btn2", target: "_blank" do %>-->
-    <!--      <i class= "fa fa-users"></i>-->
-    <!--      DevMatch-->
-    <!--    <% end %>-->
-    <!--  </div>-->
-    <!--</div>-->
     
-    
-  </div>
-</div>
 
