switched f5sect with Dormer fan page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,15 +39,14 @@
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "//shielded-river-55784.herokuapp.com/", class:"btn2", target: "_blank" do %>
+        <%= link_to "https://lestleygabo.herokuapp.com/", class:"btn2", target: "_blank" do %>
         <i class= "fa fa-id-badge"></i>
         Lestley Links
         <% end %>
       </div>
       <div class="col-md-4">
-        <%= link_to "#", class:"btn2" do %>
-        <i class= "fa fa-question"></i>
-        F5Sect
+        <%= link_to "https://learn-rails-by-daniel-kehoe.herokuapp.com/", class:"btn2", target: "_blank" do %>
+          Dormer Fan Page
         <% end %>
       </div>
     </div>
