--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,6 +52,27 @@
     </div>
   </div>
   
+  
+  <br>
+  <h2> PDFs </h2>
+  <div class="container">
+    <div class="row"> 
+      <div class="col-md-4">
+        <%= link_to '/resume', class:"btn2", target: "_blank"  do %>
+          Resume
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to '/ensc477lab4', class:"btn2", target: "_blank"  do %>
+          Lab - MRI
+        <% end %>
+      </div>
+    </div>
+  </div>
+  
+
+  
+  
 </div>
 
 <!----------------------------------------------------------------------------->
