--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <!--<h3>It also contains links to my projects, completed or otherwise.</h3>-->
   
   <br>
-  <h2> Profiles </h2>
+  <h1> Profiles </h1>
   <div class="container">
     <div class="row">  
       <div class="col-md-4">
@@ -29,7 +29,7 @@
   </div>
   
   <br>
-  <h2> Web Projects </h2>
+  <h1> Web Projects </h1>
   <div class="container">
     <div class="row"> 
       <div class="col-md-4">
@@ -54,26 +54,191 @@
   
   
   <br>
-  <h2> PDFs </h2>
+  <h1> PDFs </h1>
   <div class="container">
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-4 col-md-offset-4">
         <%= link_to '/resume', class:"btn2", target: "_blank"  do %>
           Resume
         <% end %>
       </div>
-      <div class="col-md-4">
-        <%= link_to '/ensc477lab4', class:"btn2", target: "_blank"  do %>
-          Lab - MRI
+    </div>
+    
+    
+      <br>
+    <h3> ENSC 483 - Modern Control Systems </h3>
+    <div class="row">    
+      <div class="col-md-6">
+        <%= link_to '/ENSC483-project1', class:"btn2", target: "_blank"  do %>
+          Research Paper Simulation
         <% end %>
       </div>
-    </div>
-  </div>
+      <div class="col-md-6">
+        <%= link_to '/ENSC483-project2', class:"btn2", target: "_blank"  do %>
+          Inverted Pendulum 
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 483 - Modern Control Systems -->
+    
+    
+      <br>
+    <h3> ENSC 477 - Biomedical Image Acquisition </h3>
+    <div class="row"> 
+      <div class="col-md-3">
+        <%= link_to '/ENSC477-lab1', class:"btn2", target: "_blank"  do %>
+          Lab 1 - MEG
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to '/ENSC477-lab2', class:"btn2", target: "_blank"  do %>
+          Lab 2 - CT
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to '/ENSC477-lab3', class:"btn2", target: "_blank"  do %>
+          Lab 3 - Ultrasound
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to '/ENSC477-lab4', class:"btn2", target: "_blank"  do %>
+          Lab 4 - MRI Lab
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 477 - Biomedical Image Acquisition  -->
+    
+        
+      <br>
+    <h3> ENSC 476 - Biophotonics and Microscopy Techniques </h3>
+    <div class="row"> 
+      <div class="col-md-4">
+        <%= link_to '/ENSC476-lab1', class:"btn2", target: "_blank"  do %>
+          Lab 1 - Confocal
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to '/ENSC476-lab2', class:"btn2", target: "_blank"  do %>
+          Lab 2 - OCT
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to '/ENSC476-lab3', class:"btn2", target: "_blank"  do %>
+          Lab 3 - Phase Microscopy
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 476 - Biophotonics and Microscopy Techniques -->
+    
+        
+      <br>
+    <h3> ENSC 470 - Optical Engineering and Laser Applications </h3>
+    <div class="row"> 
+      <div class="col-md-4">
+        <%= link_to '/ENSC470-lab1', class:"btn2", target: "_blank"  do %>
+          Lab 1 - Basic Optics
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to '/ENSC470-lab2', class:"btn2", target: "_blank"  do %>
+          Lab 2 - Spectrometer
+        <% end %>
+      </div>
+      <div class="col-md-4">
+        <%= link_to '/ENSC470-lab3', class:"btn2", target: "_blank"  do %>
+          Lab 3 - Laser Gaussian Beam
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 470 - Optical Engineering and Laser Applications -->
+    
+        
+      <br>
+    <h3> ENSC 424 - Multimedia Communications Engineering </h3>
+    <div class="row"> 
+      <div class="col-md-4 col-md-offset-4">
+        <%= link_to '/ENSC424-project', class:"btn2", target: "_blank"  do %>
+          Project Report - Philter
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 424 - Multimedia Communications Engineering -->
+    
+        
+      <br>
+    <h3> ENSC 406 - Engineering Ethics, Law, and Professional Practice </h3>
+    <div class="row"> 
+      <div class="col-md-4 col-md-offset-4">
+        <%= link_to '/ENSC406-project', class:"btn2", target: "_blank"  do %>
+          Solar Panel Sustainability
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 406 - Engineering Ethics, Law, and Professional Practice -->
+    
+        
+      <br>
+    <h3> ENSC 327 - Communication Systems </h3>
+    <div class="row"> 
+      <div class="col-md-6">
+        <%= link_to '/ENSC327-lab2', class:"btn2", target: "_blank"  do %>
+          Lab 2 - Amplitude Modulation
+        <% end %>
+      </div>
+      <div class="col-md-6">
+        <%= link_to '/ENSC327-lab3', class:"btn2", target: "_blank"  do %>
+          Lab 3 - FM Modulation and Demodulation
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 327 - Communication Systems -->
+    
+        
+      <br>
+    <h3> ENSC 304 - Human Factors and Usability Engineering </h3>
+    <div class="row"> 
+      <div class="col-md-4 col-md-offset-4">
+        <%= link_to '/ENSC304-project', class:"btn2", target: "_blank"  do %>
+          Self-Checkout Machines
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 304 - Human Factors and Usability Engineering -->
+    
+    
+      <br>
+    <h3> ENSC 225 - Microelectronics I </h3>
+    <div class="row"> 
+      <div class="col-md-3">
+        <%= link_to '/ENSC225-lab1', class:"btn2", target: "_blank"  do %>
+          Lab 1 - Opamps
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to '/ENSC225-lab2', class:"btn2", target: "_blank"  do %>
+          Lab 2 - Diodes
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to '/ENSC225-lab3', class:"btn2", target: "_blank"  do %>
+          Lab 3 - BJTs
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to '/ENSC225-lab4', class:"btn2", target: "_blank"  do %>
+          Lab 4 - MOSFETs
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 225 - Microelectronics I -->
+    
+    
+      <br>
+    <h3> PHYS 131 - Physics Laboratory I </h3>
+    <div class="row"> 
+      <div class="col-md-4 col-md-offset-4">
+        <%= link_to '/PHYS131-lab1', class:"btn2", target: "_blank"  do %>
+          Force and Moving Charges
+        <% end %>
+      </div>
+    </div> <!-- /div row of PHYS 131 - Physics Laboratory I -->
+    
+  </div> <!-- /div row of Container -->
   
-
   
   
-</div>
+</div> <!-- /div of class="home-callout text-center container-fluid" -->
 
 <!----------------------------------------------------------------------------->
 
