added top button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -237,6 +237,11 @@
   </div> <!-- /div row of Container -->
   
   
+  <br>
+  <br>
+  <br>
+  <!-- button to go to top -->
+  <button onclick="topFunction()" class="btn2" title="Go to top">Go to top of page.</button>
   
 </div> <!-- /div of class="home-callout text-center container-fluid" -->
 
