--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -148,7 +148,32 @@
       </div>
     </div> <!-- /div row of ENSC 470 - Optical Engineering and Laser Applications -->
     
-        
+      <br>
+    <h3> ENSC 305W/440W - Capstone Project </h3>
+    <div class="row"> 
+      <div class="col-md-3">
+        <%= link_to '/ENSC440-desi', class:"btn2", target: "_blank"  do %>
+          Design
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to '/ENSC440-test', class:"btn2", target: "_blank"  do %>
+          Test
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to '/ENSC440-post', class:"btn2", target: "_blank"  do %>
+          Post
+        <% end %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to '/ENSC440-demo', class:"btn2", target: "_blank"  do %>
+          Demo
+        <% end %>
+      </div>
+    </div> <!-- /div row of ENSC 305W/440W - Capstone Project -->
+    
+    
       <br>
     <h3> ENSC 424 - Multimedia Communications Engineering </h3>
     <div class="row"> 
