realized Firefox downloads pdf, going to use Google Drive instead

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,7 +58,8 @@
   <div class="container">
     <div class="row"> 
       <div class="col-md-4 col-md-offset-4">
-        <%= link_to '/resume', class:"btn2", target: "_blank"  do %>
+        <!--Resume-->
+        <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNXRlR3R0S1I4bVk/preview", class:"btn2", target: "_blank" do %>
           Resume
         <% end %>
       </div>
